--- a/Valeria.html
+++ b/Valeria.html
@@ -1,5 +1,7 @@
 #Cosas que me gustan de ti
-° Tu sonrisa 
-° Tu carita toda linda
-° Lo fuerte que eres 
-° Los guapo que estás uwu
+
+° Tu sonrisa,
+° Tu carita toda linda,
+° Lo fuerte que eres,
+° Los guapo que estás uwu, 
+
